--- a/Pag web A1/Index/Index.html
+++ b/Pag web A1/Index/Index.html
@@ -6,14 +6,14 @@
     <title> Comida Saludable </title>
     <link rel="stylesheet" href="../css/estilos.css"/>
     <link rel="stylesheet" href="../css/grid.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Gupter&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <meta name="description" content="Delivery de comida saludable con envío gratis . Tenemos un plan alimenticio y nuestro sistema de entrega, usted tendrá el mejor plan nutricional a su disposición con un solo click. Comidas nutritivas y frescas, entregadas directamente a su puerta.">
 
 </head>
 <body>
 <div id="contenedors">
     <header>
-        <h1 class="fuente comicSans centrar FondoHeader" >PLAN FIT</h1>
+        <h1 class="fuente Roboto centrar FondoHeader" >PLAN FIT</h1>
          <nav>
             <ul>
                 <li><a href="index.html" class="sacarSubrayado">Inicio</a>
