--- a/Pag web A1/Beneficios.html
+++ b/Pag web A1/Beneficios.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sobre nosotros</title>
     <link rel="stylesheet" href="css/estilos.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1 class="fuente comicSans centrar FondoHeader" >BENEFICIOS</h1>
+        <h1 class="fuente Roboto centrar FondoHeader" >BENEFICIOS</h1>
     </header>
     <main>
         <p><span class=negrita>¿Por qué elegirnos?</span>
