--- a/Pag web A1/Nosotros.html
+++ b/Pag web A1/Nosotros.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sobre nosotros</title>
     <link rel="stylesheet" href="css/estilos.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1 class="fuente comicSans centrar FondoHeader" >NOSOTROS</h1>
+        <h1 class="fuente Roboto centrar FondoHeader" >NOSOTROS</h1>
         <img src="Logo.JPG" alt="Logo de negocio" width ="150px" class="Imagen"/>
     </header>
     <main>
