--- a/Pag web A1/Pack.html
+++ b/Pag web A1/Pack.html
@@ -7,10 +7,11 @@
     <title>Sobre nosotros</title>
     <link rel="stylesheet" href="css/estilos.css"/>
     <link rel="stylesheet" href="css/grid.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1 class="fuente comicSans centrar FondoHeader" >ARMA TU PACK</h1>
+        <h1 class="fuente Roboto centrar FondoHeader" >ARMA TU PACK</h1>
     </header>
     <main>
         <p class="negrita" style="text-align:center";>Paquetes </p>
